%% ChartDB ERD - Database Schema Visualization
%% Generated from example_chartdb_schema.json
%% This diagram shows the Entity Relationship Diagram for the IMO Creator database schema

erDiagram
    USERS ||--o{ PROJECTS : "has"
    PROJECTS ||--o{ TASKS : "contains"

    USERS {
        serial id PK "Primary Key"
        varchar email UK "Unique, Not Null"
        varchar password_hash "Not Null"
        varchar name "Nullable"
        varchar role "Default: 'user'"
        varchar heir_id UK "STAMPED: HEIR Tracking"
        varchar process_id "STAMPED: Process Tracking"
        timestamp created_at "STAMPED: Creation Time"
        timestamp updated_at "STAMPED: Update Time"
        varchar created_by "STAMPED: Creator"
        integer orbt_layer "STAMPED: ORBT Layer (1-4)"
        varchar blueprint_version "STAMPED: Blueprint Version"
    }

    PROJECTS {
        serial id PK "Primary Key"
        integer user_id FK "References users(id)"
        varchar name "Not Null"
        text description "Nullable"
        varchar status "Default: 'active'"
        varchar heir_id UK "STAMPED: HEIR Tracking"
        varchar process_id "STAMPED: Process Tracking"
        timestamp created_at "STAMPED: Creation Time"
        timestamp updated_at "STAMPED: Update Time"
        varchar created_by "STAMPED: Creator"
        integer orbt_layer "STAMPED: ORBT Layer (1-4)"
        varchar blueprint_version "STAMPED: Blueprint Version"
    }

    TASKS {
        serial id PK "Primary Key"
        integer project_id FK "References projects(id)"
        varchar title "Not Null"
        text description "Nullable"
        varchar status "Default: 'todo'"
        integer priority "Default: 0"
        varchar heir_id UK "STAMPED: HEIR Tracking"
        varchar process_id "STAMPED: Process Tracking"
        timestamp created_at "STAMPED: Creation Time"
        timestamp updated_at "STAMPED: Update Time"
        varchar created_by "STAMPED: Creator"
        integer orbt_layer "STAMPED: ORBT Layer (1-4)"
        varchar blueprint_version "STAMPED: Blueprint Version"
    }


